editted the TextMate file

--- a/cake.html
+++ b/cake.html
@@ -4,10 +4,13 @@
 <script>
 		var cake = prompt("Do you want cake?");
 		if (cake==="yes"){
-			console.log("Have some cake");
+			console.log("Have some cake.");
+		}
+		else if(cake==="no"){
+			console.log("No cake for you.")
 		}
 		else{
-			console.log("No cake for you.")
+			console.log("I don't understand.")
 		}
 </script>
 </body>
